# cannelloni

./: .gitignore  CMakeLists.txt  README.md  cannelloni.cpp  canthread.cpp  canthread.h  config.h.cmake  connection.h  flake.nix  framebuffer.h  mdns.cpp  mdns.h  peer.h  peerregistry.cpp  peerregistry.h  router.cpp  router.h  sctpthread.cpp  sctpthread.h  tcp_server_thread.cpp  tcpthread.cpp  tcpthread.h  timer.cpp  timer.h  udpthread.cpp  udpthread.h
.beads/: interactions.jsonl  issues.jsonl  metadata.json
nix/: module.nix  overlay.nix  package.nix
nix/tests/: characterization.nix  characterization_sort.nix  common.nix  discovery.nix  ingress.nix  mdns.nix  multipeer.nix  sctp.nix  tcp.nix  tcp_multipeer.nix  udp.nix
tests/: frame_compare.py
